http => https links

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -726,24 +726,24 @@ example = example
 
 export = export
 
-export.bibtex.faq     = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> is a popular bibliography management tool for <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Save this output and include it in your LaTeX file with the command <code>bibliography{FILENAME}</code> by substituting <code>FILENAME</code> with the name you gave the file while saving it and omitting the <code>.bib</code> ending.
+export.bibtex.faq     = <a href="https://en.wikipedia.org/wiki/BibTeX">BibTeX</a> is a popular bibliography management tool for <a href="https://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Save this output and include it in your LaTeX file with the command <code>bibliography{FILENAME}</code> by substituting <code>FILENAME</code> with the name you gave the file while saving it and omitting the <code>.bib</code> ending.
 export.bibtex.record  = BibTeX record
 export.bibtex.title   = export as BibTeX
-export.burst.faq      = This is an <a href="http://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
+export.burst.faq      = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
 export.csl.caption    = CSL input format (JSON)
 export.csl.faq        = The <a href="http://citationstyles.org/">Citation Style Language</a> (CSL)  is an open XML-based language to format bibliographies and citations. This JSON export is compatible with most of the <a href="http://citationstyles.org/developers/">CiteProc implementations</a>.
-export.custom.faq     = A custom <a href="http://jabref.sourceforge.net/">JabRef</a> layout which you can upload on the <a href="/settings?selTab=2#layout">settings</a> page. Information on how to write such a layout filter can be found <a href="http://jabref.sourceforge.net/help/CustomExports.php">here</a>.
+export.custom.faq     = A custom <a href="https://www.jabref.org">JabRef</a> layout which you can upload on the <a href="/settings?selTab=2#layout">settings</a> page. Information on how to write such a layout filter can be found <a href="https://help.jabref.org/en/CustomExports">here</a>.
 export.endnote.record = Endnote record
 export.format         = format
 # export page
 export.header         = Export publications
-export.html.faq       = This gives you a simple <a href="http://en.wikipedia.org/wiki/HTML">HTML</a> formatted page which you can include into your homepage.
+export.html.faq       = This gives you a simple <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> formatted page which you can include into your homepage.
 export.info           = By selecting one of the formats you can export the publications of the page {0} in that format.
-export.jabref.explain = These export filters are from <a href="http://jabref.sourceforge.net/">JabRef</a>, a tool to manage publication references on the desktop.<br />\n\u0009\u0009It includes a mechanism to write layout files which allow the export of references in a nicely formatted way.
+export.jabref.explain = These export filters are from <a href="https://www.jabref.org">JabRef</a>, a tool to manage publication references on the desktop.<br />\n\u0009\u0009It includes a mechanism to write layout files which allow the export of references in a nicely formatted way.
 export.json.faq       = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) is a lightweight exchange format for web programming with JavaScript. Using the <tt>callback</tt> parameter you get output in JSONP format.
 export.layout         = export layout
-export.rss.faq        = With an appropriate <a href="http://en.wikipedia.org/wiki/RSS">RSS</a>-tool you can subscribe to this RSS feed and get notifications when someone adds publications to it.
-export.swrc.faq       = This is an <a href="http://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://ontoware.org/projects/swrc/">SWRC</a> ontology.
+export.rss.faq        = With an appropriate <a href="https://en.wikipedia.org/wiki/RSS">RSS</a>-tool you can subscribe to this RSS feed and get notifications when someone adds publications to it.
+export.swrc.faq       = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://ontoware.org/projects/swrc/">SWRC</a> ontology.
 
 # RSS feed titles
 feeds.bookmark    = Bookmark RSS feed for
@@ -1001,7 +1001,7 @@ inboxPage.about = When other users tag one of their posts with "send:{0}", it wi
 
 insert = insert
 
-issues = <a href="http://bitbucket.org/bibsonomy/bibsonomy/issues">Report Issues</a>
+issues = <a href="https://bitbucket.org/bibsonomy/bibsonomy/issues">Report Issues</a>
 
 joinGroup = join group
 
@@ -1303,7 +1303,7 @@ oauth.authorization.app              = Allow {0} access?
 oauth.authorization.button.authorize = Authorize
 oauth.authorization.button.deny      = Deny
 oauth.authorization.callback.token   = Please enter code <b>{0}</b> when requested.
-oauth.authorization.explanation      = If you authorize this request, the application gains full access to your identity and resources. Please note that communication is secured via <a href="http://oauth.net">OAuth</a>, the open standard for authorization. This allows you to share your private resources stored on {0} with this application without having to hand out your username and password.<br>
+oauth.authorization.explanation      = If you authorize this request, the application gains full access to your identity and resources. Please note that communication is secured via <a href="https://oauth.net">OAuth</a>, the open standard for authorization. This allows you to share your private resources stored on {0} with this application without having to hand out your username and password.<br>
 oauth.authorization.intro            = An Application would like to connect to your account!<br>\r\nThe application <b> {0} </b> by <b> {1} </b> would like to have the ability to <b>access and update</b> your data on {2}
 oauth.authorization.success          = You successfully authorized the application "{0}" to access your data in {1}.
 oauth.button.delete                  = Delete
@@ -1323,7 +1323,7 @@ opensocial.gadget.config.missing = <em>Missing gadget configuration:</em>\n<p>Pl
 opensocial.gadget.error          = <em>Whoops, something went wrong!</em> \n<p>Please note that this gadget is in a development phase. You can help us a lot by sending us a <a href="mailto:webmaster@bibsonomy.org">mail</a>. Meanwhile you can try to reload this gadget.</p>
 opensocial.gadget.reload         = Reload this gadget.
 opensocial.gadget.servertext     = The server reported:
-opensocial.oauth.personalize     = This gadget uses <a href="http://oauth.net/">OAuth</a> for accessing your BibSonomy profile data. You have to approve access one-time by <a href="#" id="personalize">clicking on this link</a>.
+opensocial.oauth.personalize     = This gadget uses <a href="https://oauth.net/">OAuth</a> for accessing your BibSonomy profile data. You have to approve access one-time by <a href="#" id="personalize">clicking on this link</a>.
 opensocial.oauth.waiting         = Please click <a href="#" id="approvaldone">I've approved access</a> once you've approved access to your data.
 opensocial.user.profile.title    = profile page
 
@@ -2218,7 +2218,7 @@ settings.jabRef.begin.help                                  = appears at the beg
 settings.jabRef.button                                      = upload
 settings.jabRef.end                                         = end.layout (optional)
 settings.jabRef.end.help                                    = appears at the end of the output (optional)
-settings.jabRef.explain                                     = For an explanation on how to write such export filters, have a look at the <a href="http://jabref.sourceforge.net/help/CustomExports.php">the JabRef page</a>. You (and only you!) can use these layouts to show your publication lists in a format of your choice. After uploading the correct file(s) have a look at my {0} to see how it looks.
+settings.jabRef.explain                                     = For an explanation on how to write such export filters, have a look at the <a href="https://help.jabref.org/en/CustomExports">the JabRef page</a>. You (and only you!) can use these layouts to show your publication lists in a format of your choice. After uploading the correct file(s) have a look at my {0} to see how it looks.
 settings.jabRef.item                                        = item.layout
 settings.jabRef.item.help                                   = used to render each publication post
 settings.jabRef.layoutfile                                  = JabRef layout file
@@ -2428,10 +2428,10 @@ system.desc                              = The blue social bookmark and publicat
 system.error.unsupportedmediatype        = The requested format is not supported.
 system.feature.beta                      = Beta
 system.feature.beta.info                 = This feature is still in beta.
-system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found on the <a href="http://www.bibsonomy.org/help_en/GroupFunctions">groups help page</a> and in the blog post <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
+system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found on the <a href="/help_en/GroupFunctions">groups help page</a> and in the blog post <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
-system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
+system.offeredBy                         = {0} is offered by the <a href="https://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="https://www.l3s.de/">L3S Research Center</a>, Germany.
 system.readOnly.notice                   = {0} is currently in read-only mode. We\u2019ll return with full functionality soon.
 system.recent                            = Here you see the latest posts:
 system.recentlyDiscussed.intro.help      = See our help sections on <a href='/help_en/DiscussionReviewsComments'>discussions</a> to learn more about reviews and comments.
@@ -2565,7 +2565,7 @@ user.useExternalPicture.help.false    = {0}: A picture <em>locally uploaded</em>
 user.useExternalPicture.help.true     = {0}: Your email address will be hashed to request your profile picture from <em>{1}</em>.
 user.useExternalPicture.service       = Gravatar
 user.useExternalPicture.service.label = link to {0}
-user.useExternalPicture.service.link  = http://gravatar.com/
+user.useExternalPicture.service.link  = https://gravatar.com/
 user.useExternalPicture.true          = external ({0})
 
 users = users
