--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -726,21 +726,21 @@ export = Export
 export.bibtex.faq     = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> ist ein popul\u00E4res Verwaltungswerkzeug f\u00FCr Literaturreferenzen in <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Speichern Sie die Ausgabe und binden Sie diese mit dem Befehl <code>bibliography{FILENAME}</code> in Ihre LaTeX-Datei ein. Das Argument <code>FILENAME</code> muss anschlie\u00DFend durch den Namen der Datei, in der Sie die Ausgabe gespeichert haben, ersetzt werden (ohne die Endung <code>.bib</code>).
 export.bibtex.record  = BibTeX-Eintrag
 export.bibtex.title   = als BibTeX exportieren
-export.burst.faq      = Ein g\u00FCltiger <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
+export.burst.faq      = Ein g\u00FCltiger <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
 export.csl.caption    = CSL Eingabeformat (JSON)
 export.csl.faq        = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
-export.custom.faq     = Ein benutzerspezifisches <a href="http://jabref.sourceforge.net/">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
+export.custom.faq     = Ein benutzerspezifisches <a href="https://www.jabref.org/">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
 export.endnote.record = Endnote-Eintrag
 export.format         = Format
 #Export Seite
 export.header         = Publikationsexport
-export.html.faq       = Eine einfach formatierte <a href="http://en.wikipedia.org/wiki/HTML">HTML</a>-Seite, die Sie in Ihre Homepage einf\u00FCgen k\u00F6nnen.
+export.html.faq       = Eine einfach formatierte <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>-Seite, die Sie in Ihre Homepage einf\u00FCgen k\u00F6nnen.
 export.info           = W\u00E4hlen Sie ein Format aus, in das die Publikationen der Seite {0} exportiert werden sollen.  
-export.jabref.explain = Diese Exportfilter stammen von <a href="http://jabref.sourceforge.net/">JabRef</a>. Dies ist ein Werkzeug f\u00FCr die Verwaltung von Publikationsreferenzen auf dem Desktop.<br />\n\u0009\u0009Es beinhaltet einen Mechanismus f\u00FCr das Schreiben von Layoutdateien, die das  Exportieren von formatierten Referenzen erlauben. 
+export.jabref.explain = Diese Exportfilter stammen von <a href="https://www.jabref.org">JabRef</a>. Dies ist ein Werkzeug f\u00FCr die Verwaltung von Publikationsreferenzen auf dem Desktop.<br />\n\u0009\u0009Es beinhaltet einen Mechanismus f\u00FCr das Schreiben von Layoutdateien, die das  Exportieren von formatierten Referenzen erlauben. 
 export.json.faq       = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) ist ein leichtgewichtiges Austauschformat f\u00FCr die Webprogrammierung mit JavaScript. Mittels der Option <tt>callback</tt> erhalten Sie eine Ausgabe im JSONP-Format.
 export.layout         = Layout exportieren
-export.rss.faq        = Mit einem geeigneten <a href="http://en.wikipedia.org/wiki/RSS">RSS</a>-Programm k\u00F6nnen Sie sich an diesem RSS-Feed anmelden. Sie werden dadurch benachrichtigt, sobald eine Publikation hinzugef\u00FCgt wurde.
-export.swrc.faq       = Eine <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Ausgabe entsprechend der <a href="http://ontoware.org/projects/swrc/">SWRC</a>-Ontologie.   
+export.rss.faq        = Mit einem geeigneten <a href="https://en.wikipedia.org/wiki/RSS">RSS</a>-Programm k\u00F6nnen Sie sich an diesem RSS-Feed anmelden. Sie werden dadurch benachrichtigt, sobald eine Publikation hinzugef\u00FCgt wurde.
+export.swrc.faq       = Eine <a href="https://en.wikipedia.org/wiki/RDF">RDF</a>-Ausgabe entsprechend der <a href="http://ontoware.org/projects/swrc/">SWRC</a>-Ontologie.   
 
 # RSS feed titles
 feeds.bookmark    = Lesezeichen RSS-Feed f\u00FCr
@@ -996,7 +996,7 @@ inboxPage.about = Wenn ein anderer Benutzer einen seiner Eintr\u00E4ge mit "send
 
 insert = Einf\u00FCgen
 
-issues = <a href="http://bitbucket.org/bibsonomy/bibsonomy/issues">Probleme melden</a>
+issues = <a href="https://bitbucket.org/bibsonomy/bibsonomy/issues">Probleme melden</a>
 
 joinGroup = Gruppe beitreten
 
@@ -1293,7 +1293,7 @@ oauth.authorization.app              = Den Zugriff f\u00FCr {0} erlauben?
 oauth.authorization.button.authorize = Erlauben
 oauth.authorization.button.deny      = Ablehnen
 oauth.authorization.callback.token   = Bitte geben Sie gegebenenfalls den Schl\u00FCssel <b>{0}</b> zur Best\u00E4tigung der Autorisierung ein.
-oauth.authorization.explanation      = Diese Anwendung verlangt vollen Zugriff auf Ihre Identit\u00E4t und Ressourcen in {0}. Alle Zugriffe auf Ihre Resourcen in {0} sind mittels <a href="http://oauth.net">OAuth</a> abgesichert - dem offenen Standard f\u00FCr Autorisierung. Auf diese Weise k\u00F6nnen Sie ihre Ressourcen aus {0} in der Anwendung nutzen ohne in dieser Ihr Passwort zu hinterlegen.<br>
+oauth.authorization.explanation      = Diese Anwendung verlangt vollen Zugriff auf Ihre Identit\u00E4t und Ressourcen in {0}. Alle Zugriffe auf Ihre Resourcen in {0} sind mittels <a href="https://oauth.net">OAuth</a> abgesichert - dem offenen Standard f\u00FCr Autorisierung. Auf diese Weise k\u00F6nnen Sie ihre Ressourcen aus {0} in der Anwendung nutzen ohne in dieser Ihr Passwort zu hinterlegen.<br>
 oauth.authorization.intro            = Eine Anwendung m\u00F6chte sich mit Ihrem Konto verbinden!<br>\r\nDie Anwendung <b> {0} </b> von <b> {1} </b> w\u00FCrde gerne die M\u00F6glichkeit haben, <b>Zugriff- und Update Funktionen</b> auf Ihre Daten bei {2} durchf\u00FChren zu k\u00F6nnen.
 oauth.authorization.success          = "{0}" darf nun auf Ihre Daten in {1} zugreifen.
 oauth.button.delete                  = L\u00F6schen
@@ -1313,7 +1313,7 @@ opensocial.gadget.config.missing = <em>Fehlende Konfiguration:</em>\n<p>Bitte ge
 opensocial.gadget.error          = <em>Ohje - Leider ist etwas schief gegangen!</em> \n<p>Bitte beachten Sie, dass sich dieses Gadget im fr\u00FChen Entwicklungsstadium befindet. Sie k\u00F6nnen uns helfen, indem Sie uns einen <a href="mailto:webmaster@bibsonomy.org">Fehlerbericht senden</a>. In der Zwischenzeit k\u00F6nnen Sie die versuchen, dass Gadget erneut zu rendern.\n</p>
 opensocial.gadget.reload         = Dieses Gadget erneut laden.
 opensocial.gadget.servertext     = Statusmeldung des Servers:
-opensocial.oauth.personalize     = Dieses Gadget verwendet <a href="http://oauth.net/">OAuth</a> zum Zugriff auf Ihr BibSonomy-Profil. Hierzu m\u00FCssen Sie einmalig eine entsprechende Zustimmung erteilen. Klicken Sie hierzu bitte auf <a href="#" id="personalize">diesen Link</a>.
+opensocial.oauth.personalize     = Dieses Gadget verwendet <a href="https://oauth.net/">OAuth</a> zum Zugriff auf Ihr BibSonomy-Profil. Hierzu m\u00FCssen Sie einmalig eine entsprechende Zustimmung erteilen. Klicken Sie hierzu bitte auf <a href="#" id="personalize">diesen Link</a>.
 opensocial.oauth.waiting         = Bitte klicken Sie auf <a href="#" id="approvaldone">Ich habe dem Zugriff auf meine Daten in BibSonomy zugestimmt</a> sobald Sie in BibSonomy eine entsprechende Best\u00E4tigung hinterlegt haben.
 opensocial.user.profile.title    = Profil
 
@@ -1448,7 +1448,7 @@ persons.intro.reg.text         = Die Genealogie nutzt die Kompetenz und Erfahrun
 persons.intro.search.desc      = Hier Personennamen (Doktorrand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
 persons.intro.wiskidz.desc     = &nbsp;
 persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
-persons.intro.wiskidz.text     = Die {0} Genealogie ist ein vom Bundesministerium f\u00FCr Bildung und Forschung gef\u00F6rdertes Projekt des International Centre for Higher Education Research (INCHER-Kassel) und des Forschungszentrums f\u00FCr Informationstechnik-Gestaltung (ITeG) der Universit\u00E4t Kassel. Verantwortlicher Ansprechpartner ist Prof. Dr. Guido B\u00FCnstorf (buenstorf&lt;at&gt;uni-kassel.de). Detaillierte Information zum Forschungsprojekt gibt es unter: <a href="http://www.uni-kassel.de/go/wiskidz">www.uni-kassel.de/go/wiskidz</a>
+persons.intro.wiskidz.text     = Die {0} Genealogie ist ein vom Bundesministerium f\u00FCr Bildung und Forschung gef\u00F6rdertes Projekt des International Centre for Higher Education Research (INCHER-Kassel) und des Forschungszentrums f\u00FCr Informationstechnik-Gestaltung (ITeG) der Universit\u00E4t Kassel. Verantwortlicher Ansprechpartner ist Prof. Dr. Guido B\u00FCnstorf (buenstorf&lt;at&gt;uni-kassel.de). Detaillierte Information zum Forschungsprojekt gibt es unter: <a href="https://www.uni-kassel.de/go/wiskidz">www.uni-kassel.de/go/wiskidz</a>
 
 plain = einfach
 
@@ -2205,7 +2205,7 @@ settings.jabRef.begin.help                                  = Erscheint am Anfan
 settings.jabRef.button                                      = Abschicken
 settings.jabRef.end                                         = end.layout (optional)
 settings.jabRef.end.help                                    = Erscheint am Ende der Ausgabe (optional)
-settings.jabRef.explain                                     = F\u00FCr weiterf\u00FChrende Erl\u00E4uterungen zur Erzeugung von Layoutfiltern, schauen Sie bitte auf die <a href="http://jabref.sourceforge.net/help/CustomExports.php">JabRef Seite</a>. Ausschlie\u00DFlich k\u00F6nnen Sie Ihre Layouts f\u00FCr die Veranschaulichung Ihrer Publikationsliste verwenden. Nachdem Sie die korrekten Dateien hochgeladen haben, finden Sie Ihr Layout unter folgender {0} Seite.
+settings.jabRef.explain                                     = F\u00FCr weiterf\u00FChrende Erl\u00E4uterungen zur Erzeugung von Layoutfiltern, schauen Sie bitte auf die <a href="https://help.jabref.org/en/CustomExports">JabRef Seite</a>. Ausschlie\u00DFlich k\u00F6nnen Sie Ihre Layouts f\u00FCr die Veranschaulichung Ihrer Publikationsliste verwenden. Nachdem Sie die korrekten Dateien hochgeladen haben, finden Sie Ihr Layout unter folgender {0} Seite.
 settings.jabRef.item                                        = item.layout
 settings.jabRef.item.help                                   = Wird ben\u00F6tigt, um jede Publikation zu \u00FCbersetzen
 settings.jabRef.layoutfile                                  = JabRef Layout-Datei
@@ -2415,10 +2415,10 @@ system.desc                              = Lesezeichen und Publikationen teilen 
 system.error.unsupportedmediatype        = Das angefragte Format wird nicht unterst\u00FCtzt.
 system.feature.beta                      = Beta
 system.feature.beta.info                 = Diese Funktion ist noch im Beta-Statium.
-system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie auf der <a href="http://www.bibsonomy.org/help_de/Gruppenfunktionen">Gruppen-Hilfeseite</a> und in unserem Blog (auf Englisch) unter <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
+system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie auf der <a href="/help_de/Gruppenfunktionen">Gruppen-Hilfeseite</a> und in unserem Blog (auf Englisch) unter <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
-system.offeredBy                         = {0} wird vom <a href="http://www.kde.cs.uni-kassel.de/kontakt.html">FG Wissensverarbeitung</a> der Universit\u00E4t Kassel, der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg und vom <a href="http://www.l3s.de/">Forschungszentrum L3S</a> betrieben.
+system.offeredBy                         = {0} wird vom <a href="https://www.kde.cs.uni-kassel.de/kontakt.html">FG Wissensverarbeitung</a> der Universit\u00E4t Kassel, der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg und vom <a href="https://www.l3s.de/">Forschungszentrum L3S</a> betrieben.
 system.readOnly.notice                   = {0} ist momentam im schreibgesch\u00FCtzten Modus. Wir werden bald die vollst\u00E4ndige Funktionalit\u00E4t wiederherstellen. 
 system.recent                            = Hier sind die letzten Beitr\u00E4ge aufgelistet:
 system.recentlyDiscussed.intro.help      = Besuchen Sie unsere Hilfeseiten zu <a href='/help_de/KommentarRezensionBewertung'>Diskussionen</a> um mehr \u00FCber Rezensionen und Kommentare zu erfahren.
@@ -2500,7 +2500,7 @@ totop = nach oben
 
 # override predefined Spring error messages
 typeMismatch.int            = Bitte geben Sie eine g\u00FCltige Zahl ein.
-typeMismatch.java.net.URL   = Bitte geben Sie eine g\u00FCltige URL ein. Typischerweise beginnt eine URL mit "http://".
+typeMismatch.java.net.URL   = Bitte geben Sie eine g\u00FCltige URL ein. Typischerweise beginnt eine URL mit "http://" oder "https://".
 typeMismatch.java.util.Date = Bitte geben Sie ein g\u00FCltiges Datum ein.
 
 typoThree.plugin = TYPO3 Extension
@@ -2552,7 +2552,7 @@ user.useExternalPicture.help.false    = {0}: Ein <em>lokal hochgeladenes</em> Bi
 user.useExternalPicture.help.true     = {0}: Ihre Email-Adresse wird gehashed, um Ihr Profilbild von <em>{1}</em> zu erfragen.
 user.useExternalPicture.service       = Gravatar
 user.useExternalPicture.service.label = Link zu {0}
-user.useExternalPicture.service.link  = http://de.gravatar.com/
+user.useExternalPicture.service.link  = https://de.gravatar.com/
 user.useExternalPicture.true          = Extern ({0})
 
 users = Benutzer
