moved layout fav hint to section header
added german translation

using url generator to generate settings url

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2110,6 +2110,7 @@ settings.enabled                                            = enabled
 settings.english                                            = English
 settings.favouriteExports                                   = favourite export formats
 settings.favouriteExports.add                               = add export format
+settings.favouriteExports.hint                              = The citation formats that are shown in the tab bar below can be changed in the <a href="{0}">settings</a>.
 settings.female                                             = female
 settings.frequency                                          = frequency
 settings.friendOf                                           = I'm a friend of
