--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2095,6 +2095,7 @@ settings.enabled                                            = Aktiviert
 settings.english                                            = Englisch
 settings.favouriteExports                                   = Bevorzugte Exportformate
 settings.favouriteExports.add                               = Exportformat hinzuf\u00FCgen
+settings.favouriteExports.hint                              = Die Zitationsstile, die in der unteren Tableiste angezeigt werden, k\u00F6nnen Sie in den <a href="{0}">Einstellungen</a> \u00E4ndern.
 settings.female                                             = Frau
 settings.frequency                                          = H\u00E4ufigkeit
 settings.friendOf                                           = Ich bin ein Freund von
