--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1896,6 +1896,7 @@ settings.enabled                                            = \u0432\u043A\u043B
 settings.english                                            = \u0430\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
 settings.favouriteExports                                   = 
 settings.favouriteExports.add                               = 
+settings.favouriteExports.hint                              = 
 settings.female                                             = \u0436\u0435\u043D\u0441\u043A\u0438\u0439
 settings.frequency                                          = \u0447\u0430\u0441\u0442\u043E\u0442\u0430
 settings.friendOf                                           = \u042F \u0434\u0440\u0443\u0433 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
