- rename bibActionButtons -> pubActionButtons - disambiguation-page   removed user picture   show related pubs of known persons (part I) - genealogy-page   typeahead: show result-count, limit 100, message-properties, styles for personPage - removed fix limit of 5 from EsResourceSearch

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1459,6 +1459,9 @@ persons.intro.reg.desc         = &nbsp;
 persons.intro.reg.img          = /resources/image/logo_person_reg.svg
 persons.intro.reg.text         = {0} Genealogy builds on the competence and experience of {0}, the non-commercial \u0009platform for sharing publications and bookmarks. User registration and secure data management are \u0009implemented via the {0} platform. Data are exclusively used for non-commercial science and higher education research.
 persons.intro.search.desc      = Enter Person Name (Author, Advisor etc.) or Title 
+persons.intro.search.result    = {0} hits for your search
+persons.intro.search.result0   = Sorry, there are no results for your search request.
+persons.intro.search.resultMax = more than {0} hits, please refine your search
 persons.intro.wiskidz.desc     = &nbsp;
 persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
 persons.intro.wiskidz.text     = {0} Genealogy is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German Federal Ministry of Education and Research (BMBF). 
