--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1282,11 +1282,14 @@ personalized = \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u0438\u0437\u043
 personalized.info     = \u041F\u0440\u043E\u0441\u043C\u0430\u0442\u0440\u0438\u0432\u0430\u0439\u0442\u0435 \u0437\u0430\u043F\u0438\u0441\u0438 \u044D\u0442\u043E\u0433\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0432 \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u043C \u0432\u0438\u0434\u0435.
 personalized.tag.info = \u0421\u043B\u0435\u0434\u0443\u044E\u0449\u043D\u0438\u0435 \u0442\u044D\u0433\u0438 {0} \u043C\u043E\u0433\u0443\u0442 \u0431\u044B\u0442\u044C \u0412\u0430\u043C \u0438\u043D\u0442\u0435\u0440\u0435\u0441\u043D\u044B:
 
-persons.intro.dataset.desc  = &nbsp;
-persons.intro.dataset.img   = /resources/image/logo_person_dataset.svg
-persons.intro.genealogy.img = /resources/image/logo_person_genealogy.svg
-persons.intro.reg.img       = /resources/image/logo_person_reg.svg
-persons.intro.wiskidz.img   = /resources/image/logo_person_wiskidz.svg
+persons.intro.dataset.desc     = &nbsp;
+persons.intro.dataset.img      = /resources/image/logo_person_dataset.svg
+persons.intro.genealogy.img    = /resources/image/logo_person_genealogy.svg
+persons.intro.reg.img          = /resources/image/logo_person_reg.svg
+persons.intro.search.result    = 
+persons.intro.search.result0   = 
+persons.intro.search.resultMax = 
+persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
 
 plain = \u043E\u0431\u044B\u0447\u043D\u044B\u0439
 
