added old browser support

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -729,6 +729,7 @@ export.bibtex.record                = BibTeX record
 export.bibtex.title                 = export as BibTeX
 export.burst.faq                    = This is an <a href="https://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
 export.copyToLocalClipboard         = Copy citation to your local clipboard.
+export.copyToLocalClipboard.error   = Failed to copy the citation to your local clipboard. Please update your browser to the lastest version.
 export.copyToLocalClipboard.success = Copied citation to your local clipboard.
 export.csl.caption                  = CSL input format (JSON)
 export.csl.faq                      = The <a href="http://citationstyles.org/">Citation Style Language</a> (CSL)  is an open XML-based language to format bibliographies and citations. This JSON export is compatible with most of the <a href="http://citationstyles.org/developers/">CiteProc implementations</a>.
