--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -726,6 +726,7 @@ export.bibtex.record                = BibTeX-Eintrag
 export.bibtex.title                 = als BibTeX exportieren
 export.burst.faq                    = Ein g\u00FCltiger <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="https://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
 export.copyToLocalClipboard         = Zitation zur lokalen Zwischenablage hinzuf\u00FCgen.
+export.copyToLocalClipboard.error   = Leider konnte die Zitation nicht in Ihre lokale Zwischenablage kopiert werden. Bitte aktualisieren Sie Ihren Browser auf die aktuellste Version.
 export.copyToLocalClipboard.success = Zitation zur lokalen Zwischenablage hinzugef\u00FCgt.
 export.csl.caption                  = CSL Eingabeformat (JSON)
 export.csl.faq                      = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
