add missing tooltips for new resource list action menu

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1518,13 +1518,16 @@ post.meta.asGroup                                       = for
 post.meta.asPrivate                                     = as
 post.meta.batch_edit                                    = edit own posts
 post.meta.changedOn                                     = changed on
+post.meta.clipboard.title                               = clipboard actions for the displayed post of this list
 post.meta.copy_this_post                                = Copy this post.
 post.meta.display                                       = display
 post.meta.documents                                     = Here you can see all of your publication posts which have a document attached.
 post.meta.duplicates                                    = All of your publication posts that are stored in your collection at least twice.
 post.meta.edit                                          = edit
 post.meta.edit.title                                    = edit the details of all your posts from this list
+post.meta.export.title                                  = export options for displayed posts
 post.meta.filter                                        = filter
+post.meta.filter.title                                  = filter displayed posts
 post.meta.flag_as_spam                                  = spam
 post.meta.flag_as_spam.title                            = Mark this post as spam
 post.meta.helplink                                      = /help_en/Sorting%20Publications
@@ -1547,6 +1550,7 @@ post.meta.sort.criterion                                = sort by
 post.meta.sort.order                                    = order
 post.meta.sort.order.ascending                          = ascending
 post.meta.sort.order.descending                         = descending
+post.meta.sortorder.title                               = change order or sort of displayed posts
 post.meta.taggedBy                                      = by
 post.meta.taggedBy.community                            = by the community
 post.meta.taggedOn                                      = on
