--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1504,13 +1504,16 @@ post.meta.asGroup                                       = f\u00FCr
 post.meta.asPrivate                                     = als
 post.meta.batch_edit                                    = Eigene Eintr\u00E4ge bearbeiten
 post.meta.changedOn                                     = ge\u00E4ndert am
+post.meta.clipboard.title                               = Ablage Aktionen f\u00FCr die angezeigten Eintr\u00E4ge in dieser Liste
 post.meta.copy_this_post                                = Eintrag kopieren
 post.meta.display                                       = Anzeige
 post.meta.documents                                     = Hier finden Sie all Ihre Publikationseintr\u00E4ge mit Dokumenten im Anhang.
 post.meta.duplicates                                    = Alle Publikationen, die Sie mindestens zweimal in Ihrer Sammlung haben.
 post.meta.edit                                          = bearbeiten
 post.meta.edit.title                                    = Alle eigenen Eintr\u00E4ge in dieser Liste bearbeiten
+post.meta.export.title                                  = Exportoptionen f\u00FCr angezeigte Eintr\u00E4ge
 post.meta.filter                                        = Filtern
+post.meta.filter.title                                  = Angezeigte Eintr\u00E4ge filtern
 post.meta.flag_as_spam                                  = Spam
 post.meta.flag_as_spam.title                            = Diesen Eintrag als Spam markieren
 post.meta.helplink                                      = /help_de/PublikationenSortieren
@@ -1533,6 +1536,7 @@ post.meta.sort.criterion                                = sortieren nach
 post.meta.sort.order                                    = Reihenfolge
 post.meta.sort.order.ascending                          = aufsteigend
 post.meta.sort.order.descending                         = absteigend
+post.meta.sortorder.title                               = Reihenfolge oder Sortierung der angezeigten Eintr\u00E4ge \u00E4ndern
 post.meta.taggedBy                                      = von
 post.meta.taggedBy.community                            = von der Gemeinschaft
 post.meta.taggedOn                                      = am
