--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1342,13 +1342,16 @@ post.meta.asGroup                                       = \u0434\u043B\u044F
 post.meta.asPrivate                                     = \u043A\u0430\u043A
 post.meta.batch_edit                                    = \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0435 \u0437\u0430\u043F\u0438\u0441\u0438
 post.meta.changedOn                                     = \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u043E
+post.meta.clipboard.title                               = 
 post.meta.copy_this_post                                = \u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u0443\u044E \u0437\u0430\u043F\u0438\u0441\u044C.
 post.meta.display                                       = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C
 post.meta.documents                                     = \u0412\u0441\u0435 \u0412\u0430\u0448\u0438 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438 \u0441 \u0444\u0430\u0439\u043B\u0430\u043C\u0438 \u0432 \u043F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0438
 post.meta.duplicates                                    = \u0412\u0441\u0435 \u0412\u0430\u0448\u0438 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438, \u0440\u0430\u0437\u043C\u0435\u0449\u0435\u043D\u043D\u044B\u0435 \u043C\u0438\u043D\u0438\u043C\u0443\u043C \u0434\u0432\u0430\u0436\u0434\u044B \u0432 \u0432\u0430\u0448\u0435\u0439 \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
 post.meta.edit                                          = \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 post.meta.edit.title                                    = \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0434\u0435\u0442\u0430\u043B\u0438 \u0432\u0441\u0435\u0445 \u0412\u0430\u0448\u0438\u0445 \u0437\u0430\u043F\u0438\u0441\u0435\u0439 \u0432 \u0434\u0430\u043D\u043D\u043E\u043C \u0441\u043F\u0438\u0441\u043A\u0435
+post.meta.export.title                                  = 
 post.meta.filter                                        = \u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u0442\u044C
+post.meta.filter.title                                  = 
 post.meta.flag_as_spam                                  = \u0441\u043F\u0430\u043C
 post.meta.flag_as_spam.title                            = \u041F\u043E\u043C\u0435\u0442\u0438\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u044C \u043A\u0430\u043A \u0441\u043F\u0430\u043C
 post.meta.kill_spammer                                  = KillSpammer!
@@ -1370,6 +1373,7 @@ post.meta.sort.criterion                                =
 post.meta.sort.order                                    = \u043F\u043E\u0440\u044F\u0434\u043E\u043A
 post.meta.sort.order.ascending                          = \u043F\u043E \u0432\u043E\u0437\u0440\u0430\u0441\u0442\u0430\u043D\u0438\u044E
 post.meta.sort.order.descending                         = \u043F\u043E \u0443\u0431\u044B\u0432\u0430\u043D\u0438\u044E
+post.meta.sortorder.title                               = 
 post.meta.taggedBy                                      = ,
 post.meta.taggedBy.community                            = \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u043E\u043C
 post.meta.taggedOn                                      = \u0442\u044D\u0433\u0438, \u043F\u0440\u0438\u0441\u0432\u043E\u0435\u043D\u043D\u044B\u0435
