rephrased placeholder text
added desc paragraph

--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1671,6 +1671,7 @@ post_bookmark.heading      = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0434\u
 
 post_publication.addons.desc        = 
 post_publication.addons.title       = 
+post_publication.desc               = 
 post_publication.file.desc          = 
 post_publication.file.noinfo        = 
 post_publication.file.title         = 
