--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1871,6 +1871,7 @@ post_bookmark.heading      = Enter your bookmark data here
 
 post_publication.addons.desc        = You can install our Add-On or bookmarklet to post publications while browsing the web. The system can automatically extract meta information from various publishers and systems (<a href="/scraperinfo">full list of supported sites</a>).
 post_publication.addons.title       = OR: use our addon/bookmarklet to post publications while browsing the Web
+post_publication.desc               = You can search our publication repository for the publication you want to add. Just enter the title of the publication. You can also enter the ISBN, ISSN or DOI of the publication. We then try to get the meta information of the publication for you.
 post_publication.file.desc          = Upload the fulltext of the publication. We try to extract the meta information of the publication.
 post_publication.file.noinfo        = We could not extract any meta information, but we have already attached the uploaded file to this post. Please enter the meta information manually.
 post_publication.file.title         = upload document
@@ -1878,7 +1879,7 @@ post_publication.other.methods      = OR: use one of the following methods
 post_publication.search.info        = If you want to import multiple publications, please use our <a href="/import/publications">import page</a>.
 post_publication.search.loading     = searching for publications \u2026
 post_publication.search.notfound    = No match found. Please click here to post the publication manually.
-post_publication.search.placeholder = Search publication by title, ISBN, ISSN or DOI
+post_publication.search.placeholder = Search our repository for the publication you want to add
 
 posts = posts
 
