--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -24,7 +24,7 @@ admin.actions.general              = Allgemeine Aktionen
 admin.actions.group                = Gruppe hinzuf\u00FCgen
 admin.actions.group.accept         = akzeptieren
 admin.actions.group.decline        = ablehnen
-admin.actions.group.decline.reason = Gruppenanfrage von {0} mit folgender Begr\u00FCndung l\u00F6schen
+admin.actions.group.decline.reason = Gruppenanfrage von {0} mit folgender Begr\u00FCndung l\u00F6schen:
 admin.actions.oauth                = OAuth Consumer bearbeiten
 admin.actions.scraper              = Scraper Infos
 admin.actions.user                 = Benutzer Infos
@@ -1855,6 +1855,7 @@ post_bookmark.heading      = Tragen Sie Ihr Lesezeichen hier ein
 
 post_publication.addons.desc        = Sie k\u00F6nnen unser Add-On oder Bookmarklet installieren, um beim Durchsuchen des Webs Publikationen einzutragen. Das System kann automatisch Metainformationen von verschiedenen Verlegern und System extrahieren (<a href="/scraperinfo">vollst\u00E4ndige Liste der unterst\u00FCtzten Seiten</a>).
 post_publication.addons.title       = ODER: Verwenden Sie unser Addon/Bookmarklet um Publikationen w\u00E4hrend Sie das Web durchsuchen einzutragen
+post_publication.desc               = Sie k\u00F6nnen die Publikation, die Sie hinzuf\u00FCgen m\u00F6chten, in unserem Publikationsverzeichnis suchen. Alternativ k\u00F6nnen Sie auch die ISBN, ISSN oder DOI der Publikation eingeben. Wir versuchen dann die Metainformationen der Publikation f\u00FCr Sie herauszufinden.
 post_publication.file.desc          = Laden Sie den Volltext der Publikation hoch. Wir versuchen die Metainformationen der Publikation zu extrahieren.
 post_publication.file.noinfo        = Wir konnten leider keine Metainformationen extrahieren, aber das hochgeladene Dokument wurde diesem Eintrag angeh\u00E4ngt. Bitte geben Sie die Metainformationen per Hand ein.
 post_publication.file.title         = Dokument hochladen
@@ -1863,7 +1864,7 @@ post_publication.search             = Suche nach Publikationen
 post_publication.search.info        = Wenn Sie mehrere Publikationen importieren wollen, verwenden Sie bitte unsere <a href="/import/publications">Import Seite</a>.
 post_publication.search.loading     = Suche nach Publikationen \u2026
 post_publication.search.notfound    = Leider konnten wir keine Publikationen finden. Klicken Sie hier um eine Publikation manuell einzutragen.
-post_publication.search.placeholder = Publikation mittels Titel, ISBN, ISSN oder DOI suchen
+post_publication.search.placeholder = Suchen Sie die Publikation, die Sie hinzuf\u00FCgen m\u00F6chten, in unserem Publikationsverzeichnis
 
 posts = Eintr\u00E4ge
 
