tests now use RemoteTestAssert and https

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BibSonomyScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BibSonomyScraperUnitURLTest.bib
@@ -1,7 +1,7 @@
 @techreport{seminar,
   added-at = {2005-12-16T16:01:51.000+0100},
   author = {Kriegel, Daniela and Hahn, Andreas and J{"a}schke, Robert},
-  biburl = {http://www.bibsonomy.org/bibtex/2101efca8c9368b56d680ce92329784e5/jaeschke},
+  biburl = {https://www.bibsonomy.org/bibtex/2101efca8c9368b56d680ce92329784e5/jaeschke},
   description = {references from my diploma thesis},
   institution = {Technische Universit{"a}t Dresden},
   interhash = {ac48c0162b80b3afff5d099eea508961},
